--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -1,17 +1,19 @@
 EXTRA_DIST = \
 	NetworkManager-1.0.metadata \
 	NMClient-1.0.metadata \
+	NM-1.0.metadata \
 	libnm-util.deps \
-	libnm-glib.deps
+	libnm-glib.deps \
+	libnm.deps
 
-VAPIGEN_VAPIS = libnm-util.vapi libnm-glib.vapi
+VAPIGEN_VAPIS = libnm-util.vapi libnm-glib.vapi libnm.vapi
 
 if ENABLE_VAPIGEN
 include Makefile.vapigen
 
 libnm-util.vapi: $(top_builddir)/libnm-util/NetworkManager-1.0.gir  libnm-util.deps NetworkManager-1.0.metadata
 libnm-glib.vapi: $(top_builddir)/libnm-glib/NMClient-1.0.gir  libnm-glib.deps NMClient-1.0.metadata libnm-util.vapi
-
+libnm.vapi: $(top_builddir)/libnm/NM-1.0.gir libnm.deps NM-1.0.metadata
 
 libnm_util_vapi_METADATADIRS = $(srcdir)
 libnm_util_vapi_FILES = $(top_builddir)/libnm-util/NetworkManager-1.0.gir
@@ -21,6 +23,9 @@ libnm_glib_vapi_FILES = $(top_builddir)/libnm-glib/NMClient-1.0.gir
 libnm_glib_vapi_VAPIDIRS = $(builddir)
 libnm_glib_vapi_GIRDIRS = $(top_builddir)/libnm-util
 libnm_glib_vapi_DEPS = gio-2.0
+
+libnm_vapi_METADATADIRS = $(srcdir)
+libnm_vapi_FILES = $(top_builddir)/libnm/NM-1.0.gir
 
 vapidir = $(datadir)/vala/vapi
 vapi_DATA = $(VAPIGEN_VAPIS) $(VAPIGEN_VAPIS:.vapi=.deps)
