--- a/libnm/Makefile.am
+++ b/libnm/Makefile.am
@@ -41,6 +41,7 @@ libnminclude_hfiles =			\
 	nm-device-generic.h		\
 	nm-device-infiniband.h		\
 	nm-device-ip-tunnel.h		\
+	nm-device-macsec.h		\
 	nm-device-macvlan.h		\
 	nm-device-modem.h		\
 	nm-device-olpc-mesh.h		\
@@ -96,6 +97,7 @@ libnm_la_csources =			\
 	nm-device-generic.c		\
 	nm-device-infiniband.c		\
 	nm-device-ip-tunnel.c		\
+	nm-device-macsec.c		\
 	nm-device-macvlan.c		\
 	nm-device-modem.c		\
 	nm-device-olpc-mesh.c		\
